Change to HTTPS Request

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                   model which presses every key on every turn:
 
                   <div class="code-wrapper">
-                    <script src="http://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit1.lisp"></script>
+                    <script src="https://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit1.lisp"></script>
                   </div>
                 </li>
                 <li>
@@ -319,7 +319,7 @@
                   days and when the AI is in need to supplies:
 
                   <div class="code-wrapper">
-                    <script src="http://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit2.lisp"></script>
+                    <script src="https://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit2.lisp"></script>
                   </div>
                 </li>
                 <li>
@@ -328,7 +328,7 @@
                   (perhaps the most complicated module in ACT-R):
 
                   <div class="code-wrapper">
-                    <script src="http://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit3.lisp"></script>
+                    <script src="https://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit3.lisp"></script>
                   </div>
                 </li>
                 <li>
@@ -338,7 +338,7 @@
                   the game differently in different weather conditions.
 
                   <div class="code-wrapper">
-                    <script src="http://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit4.lisp"></script>
+                    <script src="https://gist-it.appspot.com/http://github.com/ACT-R/Lemonade-Stand/blob/master/public/models/unit4.lisp"></script>
                   </div>
                 </li>
             </ul>
